# changepoint-evdecafs

./: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md  RESULTS_REPORT.md  pyproject.toml
config/: params.yaml
data/raw/: brent_crude.csv  oilwell.csv  us_indpro.csv  welllog.csv
notebooks/: tester.ipynb
scripts/: run_phase1_comparison.py  run_pipeline.py
src/: __init__.py
src/data/: loader.py
src/evaluation/: __init__.py  classification_metrics.py  hausdorff.py  monte_carlo.py  mrl_index.py  sensitivity.py  tail_diagnostics.py
src/phase1/: __init__.py  ar1_model.py  baseline_detectors.py  decafs.py  evt_penalty.py  feature_extract.py  hypersensitive_cpd.py
src/phase2/: __init__.py  baselines.py  bocpd_labeller.py  fpnn.py  labelling.py  smote_balance.py
src/utils/: __init__.py  logging_config.py
src/visualization/: __init__.py  mc_comparison.py  phase1_comparison.py  phase2_visualization.py  roc_curves.py  run_charts.py  sensitivity_heatmap.py  style.py  tail_plots.py
tests/: test_data.py  test_evaluation.py  test_phase1.py  test_phase2_classifiers.py  test_phase2_prep.py  test_smoke.py
