[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "changepoint-evdecafs"
version = "0.1.0"
description = "EV-DeCAFS: Extreme Value Penalised Changepoint Detection with FPNN Classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "statsmodels>=0.14",
    "tqdm>=4.65",
    "yfinance>=0.2",
    "pyyaml>=6.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ruptures>=1.1",
    "fredapi>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
gru = ["torch>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
